[package]
name = "dasha"
version = "0.1.0"
authors = ["William Tange <will@brt.sexy>"]
license = "MIT OR Apache-2.0"
description = "An x86 disassembler"
repository = "https://github.com/disassemb-ly/dasha"
publish = false
edition = "2018"

[dependencies]
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
